--- a/frontend/src/app/c-manage/c-manage.component.html
+++ b/frontend/src/app/c-manage/c-manage.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="options">
         <button class="fnbtn" (click)="opencreaatbox()" mat-raised-button color="accent">Create New Job</button>
-        <button class="fnbtn" routerLink="/company/manage/closed" mat-raised-button color="primary">Create New Job</button>
+        <button class="fnbtn" routerLink="/company/manage/closed" mat-raised-button color="primary">See Closed Jobs</button>
      </div>
         <div class="left">
 
