--- a/frontend/src/app/header-c/header-c.component.html
+++ b/frontend/src/app/header-c/header-c.component.html
@@ -11,7 +11,8 @@
             <mat-icon class="icon" routerLink="/company/cnotification" aria-hidden="false" aria-label="notification">notifications</mat-icon>
             <mat-icon class="icon" routerLink="/company/message" aria-hidden="false" aria-label="message">message</mat-icon>
             <mat-icon class="icon" routerLink="/company" aria-hidden="false" aria-label="message">mood</mat-icon>
-    </div>
+            <mat-icon class="icon" (click)="logout()" aria-hidden="false" aria-label="trending_flat">trending_flat</mat-icon>
+        </div>
 </div>
 <div id="sidesearchreasult">
     <div class="close" (click)="hidesearchresult()">
