--- a/frontend/src/app/notification-page/notification-page.component.html
+++ b/frontend/src/app/notification-page/notification-page.component.html
@@ -1,5 +1,5 @@
 <div>
-    <app-header></app-header>
+    <app-header [count]="count"></app-header>
 </div>
 <div class="noti-main">
     <div class="recent">
