--- a/frontend/src/app/view-comp/view-comp.component.html
+++ b/frontend/src/app/view-comp/view-comp.component.html
@@ -22,7 +22,7 @@
                             </div>
                         <div class="adding-option">
                             <div class="Add-fileds">
-                                <button class="fnkbtn" routerLink="/company/3/feed" mat-raised-button color="primary">View feeds</button>
+                                <button class="fnkbtn" (click)="gotofeedpage()" mat-raised-button color="primary">View feeds</button>
                                 <button class="fnbtn" (click)="follow()" mat-raised-button color="primary">{{action}}</button> 
                             </div>
                         </div>
